@@ -1,3 +1,6 @@
+2010-11-06	Nils Durner
+	* mkfifo()
+
 2010-06-22	Nils Durner
 	* sysconf()
 
